--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bmV4dC1zaGVwaGVyZC05NC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_hRMbpvphXmjG2AIdu5TUOHi4JxPJNVz1X4EoSXdpAe
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
