--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-markdown": "^8.0.7",
+    "stripe": "^12.16.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
